crates/oxidoc/tests/snapshots/golden_writer__mediawiki__figure__figure-captioned.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<div class="figure">
[[File:pic.png|a caption]]
</div>
